# duck_tails

./: .gitattributes  .gitignore  .gitmodules  API_MIGRATION_SUMMARY.md  CMakeLists.txt  Makefile  PHASE2_DESIGN.md  README.md  extension_config.cmake  mkdocs.yml  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: advanced_examples.md  code_structure.md  db.md  git_context_manager.md  git_uris.md  index.md  ingestion.md  llmtxt.md  requirements.txt  testing_strategy.md
docs/development/: architecture.md  contributing.md
docs/examples/: advanced.md  analytics.md  historical.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: git-uris.md  lateral-joins.md  lfs.md  reading-files.md
docs/reference/: diff.md  git_blame.md  git_branches.md  git_log.md  git_parents.md  git_read.md  git_tags.md  git_tree.md  git_uri.md  index.md
src/: duck_tails_extension.cpp  git_blame.cpp  git_branches.cpp  git_context_manager.cpp  git_diff_tree.cpp  git_filesystem.cpp  git_functions.cpp  git_history.cpp  git_log.cpp  git_parents.cpp  git_path.cpp  git_read.cpp  git_status.cpp  git_tags.cpp  git_tree.cpp  git_uri.cpp  git_utils.cpp  text_diff.cpp
src/include/: duck_tails_extension.hpp  git_context_manager.hpp  git_filesystem.hpp  git_functions.hpp  git_history.hpp  git_path.hpp  git_repo_pool.hpp  git_utils.hpp  text_diff.hpp
test/: Makefile.inc  README_TEST_SETUP.md  run_tests.sh  setup_lfs_test_repo.sh  test_basic.cpp
test/data/: config.json  evolving_dataset.csv  example.py  large_dataset.csv  sales.csv
test/fixtures/: setup_fixtures.sh
test/scripts/: run_tests.sh
test/sql/: asan_hardening_lateral.test  debug_complex_lateral_no_verification.test  duck_tails.test  duck_tails_basic_functionality.test  duck_tails_comprehensive.test  duck_tails_lfs_basic.test  duck_tails_lfs_comprehensive.test  duck_tails_lfs_detection.test  duck_tails_phase2_basic.test  duck_tails_zero_args.test  git_blame.test  git_branches_each_comprehensive.test  git_clone.test.disabled  git_context_manager.test  git_diff_tree.test  git_diff_tree_commit_to_commit.test  git_each_integration.test  git_filesystem_pseudo_refs.test  git_log_each_comprehensive.test  git_log_path_filter.test  git_path_edge_cases.test  git_path_parsing.test  git_pseudo_refs.test  git_read_each_comprehensive.test  git_read_each_negative_direct.test  git_read_functions.test  git_read_workdir_index.test  git_status.test  git_tags_comprehensive.test  git_tags_each_comprehensive.test  git_tree_each_comprehensive.test  git_tree_enhanced.test  git_tree_file_ext.test  git_tree_lateral_only.test  git_tree_parents.test  git_tree_path_filtering.test  git_uri_composability.test  git_uri_composability_fixture.test  git_uri_comprehensive.test  (+20 more)
(+2 files in other folders)
